--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>best five dom assignment with js</title>
-</head>
-<body>
-    <h1>This is the best five player</h1>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Budget calculate of player</title>
+    <!-- bootstrap css cdn  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  </head>
+  <body>
+    <!-- header section starts here  -->
+    <header style="height: 90vh;" class="p-5 bg-dark text-white d-flex justify-content-center align-items-center">
+        <div class="row">
+            <div class="p-5 col-sm-12 col-md-6">
+                <img class="img-fluid rounded" src="images/home.jpg" alt="">
+            </div>
+            <div class="p-5 col-sm-12 col-md-6">
+                <h1 class="text-uppercase text-danger">Select Your Favourite Player</h1>
+                <p>The Player Selection Process is a values-based and principle-driven guide and approach to player selection that is designed to help sport organizations ensure transparency and fairness as well as communicate their commitment to True Sport.</p>
+            </div>
+        </div>
+    </header>
+    <!-- header section ends here  -->
+    <main id="main-body">
+        <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+    </main>
+
+    <!-- external js link  -->
+    <script src="js/app.js"></script>
+    <!-- bootstrap js cdn link  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  </body>
 </html>
