--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <title>Budget calculate of player</title>
     <!-- bootstrap css cdn  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  </head>
+    <style>
+        .card img{
+            height: 150px !important;
+            object-fit: cover;
+        }
+        ul li {
+            list-style: none;
+            margin: 0.5rem 1rem;
+        }
+    </style>
+</head>
   <body>
     <!-- header section starts here  -->
     <header style="height: 90vh;" class="p-5 bg-dark text-white d-flex justify-content-center align-items-center">
@@ -16,20 +26,89 @@
             </div>
             <div class="p-5 col-sm-12 col-md-6">
                 <h1 class="text-uppercase text-danger">Select Your Favourite Player</h1>
-                <p>The Player Selection Process is a values-based and principle-driven guide and approach to player selection that is designed to help sport organizations ensure transparency and fairness as well as communicate their commitment to True Sport.</p>
+                <p>The Player Selection Process is button values-based and principle-driven guide and approach to player selection that is designed to help sport organizations ensure transparency and fairness as well as communicate their commitment to True Sport.</p>
             </div>
         </div>
     </header>
     <!-- header section ends here  -->
-    <main id="main-body">
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+    <main class="my-5">
+       <div class="row bg-dark text-white">
+         <!-- player section here  -->
+         <section id="show-card-field" class="row col-8">
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="card m-3 bg-dark text-white bg-dark text-white">
+                    <img src="images/messi.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 id="messi" class="card-title">Lionel Messi</h5>
+                      <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist</small></p>    
+                      <button id="add-messi" class="btn btn-primary d-block w-100  text-uppercase text-bold">select</button>
+                    </div>
+                  </div>
             </div>
-          </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="card m-3 bg-dark text-white">
+                    <img src="images/neymar.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 id="neymar" class="card-title">Neymar Jr.</h5>
+                      <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist</small></p>    
+                      <button id="add-neymar" class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="card m-3 bg-dark text-white">
+                    <img src="images/ronaldo.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 id="ronaldo" class="card-title">Ronaldo</h5>
+                      <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist</small></p>    
+                      <button id="add-ronaldo" class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="card m-3 bg-dark text-white">
+                    <img src="images/romos.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 id="romos" class="card-title">Sergio Ramos</h5>
+                      <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist
+                    </small></p>    
+                      <button id="add-romos" class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="card m-3 bg-dark text-white">
+                    <img src="images/ronaldinho.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 id="ronaldinho" class="card-title">Ronaldinho</h5>
+                      <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist
+                    </small></p>    
+                      <button id="add-ronaldinho"  class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="card m-3 bg-dark text-white">
+                    <img src="images/mbappe.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 id="mbappe" class="card-title">Mbappé</h5>
+                      <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist
+                    </small></p>    
+                      <button id="add-mbappe" class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
+                    </div>
+                  </div>
+            </div>
+        </section>
+        <aside class="col-4  bg-dark text-danger m-2">
+            <div style="background-color: black;" class="my-2">
+                <h2 class="text-center">Selected - V</h2>
+                <ul id="player-list" class="list-group list-group-flush"></ul>
+            </div>
+            <div>
+
+            </div>
+        </aside>
+       </div>
     </main>
 
     <!-- external js link  -->
