--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="card-body">
                       <h5 id="messi" class="card-title">Lionel Messi</h5>
                       <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist</small></p>    
-                      <button id="add-messi" class="btn btn-primary d-block w-100  text-uppercase text-bold">select</button>
+                      <button onclick="addPlayer('messi')" class="btn btn-primary d-block w-100  text-uppercase text-bold">select</button>
                     </div>
                   </div>
             </div>
@@ -51,7 +51,7 @@
                     <div class="card-body">
                       <h5 id="neymar" class="card-title">Neymar Jr.</h5>
                       <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist</small></p>    
-                      <button id="add-neymar" class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
+                      <button onclick="addPlayer('neymar')" class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
                     </div>
                   </div>
             </div>
@@ -61,7 +61,7 @@
                     <div class="card-body">
                       <h5 id="ronaldo" class="card-title">Ronaldo</h5>
                       <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist</small></p>    
-                      <button id="add-ronaldo" class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
+                      <button onclick="addPlayer('ronaldo')" class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
                     </div>
                   </div>
             </div>
@@ -72,7 +72,7 @@
                       <h5 id="romos" class="card-title">Sergio Ramos</h5>
                       <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist
                     </small></p>    
-                      <button id="add-romos" class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
+                      <button onclick="addPlayer('romos')" class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
                     </div>
                   </div>
             </div>
@@ -83,7 +83,7 @@
                       <h5 id="ronaldinho" class="card-title">Ronaldinho</h5>
                       <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist
                     </small></p>    
-                      <button id="add-ronaldinho"  class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
+                      <button onclick="addPlayer('ronaldinho')" class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
                     </div>
                   </div>
             </div>
@@ -94,7 +94,7 @@
                       <h5 id="mbappe" class="card-title">Mbappé</h5>
                       <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist
                     </small></p>    
-                      <button id="add-mbappe" class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
+                      <button onclick="addPlayer('mbappe')" class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
                     </div>
                   </div>
             </div>
