--- a/index.html
+++ b/index.html
@@ -1,119 +1,162 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Budget calculate of player</title>
-    <!-- bootstrap css cdn  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <style>
-        .card img{
-            height: 150px !important;
-            object-fit: cover;
-        }
-        ul li {
-            list-style: none;
-            margin: 0.5rem 1rem;
-        }
-    </style>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Budget calculate of player</title>
+  <!-- bootstrap css cdn  -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <style>
+    .card img {
+      height: 150px !important;
+      object-fit: cover;
+    }
+
+    ul li {
+      list-style: none;
+      margin: 0.5rem 1rem;
+    }
+  </style>
 </head>
-  <body>
-    <!-- header section starts here  -->
-    <header style="height: 90vh;" class="p-5 bg-dark text-white d-flex justify-content-center align-items-center">
-        <div class="row">
-            <div class="p-5 col-sm-12 col-md-6">
-                <img class="img-fluid rounded" src="images/home.jpg" alt="">
+
+<body>
+  <!-- header section starts here  -->
+  <header style="height: 90vh;" class="p-5 bg-dark text-white d-flex justify-content-center align-items-center">
+    <div class="row">
+      <div class="p-5 col-sm-12 col-md-6">
+        <img class="img-fluid rounded" src="images/home.jpg" alt="">
+      </div>
+      <div class="p-5 col-sm-12 col-md-6">
+        <h1 class="text-uppercase text-danger">Select Your Favourite Player</h1>
+        <p>The Player Selection Process is button values-based and principle-driven guide and approach to player
+          selection that is designed to help sport organizations ensure transparency and fairness as well as communicate
+          their commitment to True Sport.</p>
+      </div>
+    </div>
+  </header>
+  <!-- header section ends here  -->
+  <main class="my-5">
+    <div class="row bg-dark text-white">
+      <!-- player section here  -->
+      <section id="show-card-field" class="row col-8">
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card m-3 bg-dark text-white bg-dark text-white">
+            <img src="images/messi.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 id="messi" class="card-title">Lionel Messi</h5>
+              <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist</small></p>
+              <button onclick="addPlayer('messi')"
+                class="btn btn-primary d-block w-100  text-uppercase text-bold">select</button>
             </div>
-            <div class="p-5 col-sm-12 col-md-6">
-                <h1 class="text-uppercase text-danger">Select Your Favourite Player</h1>
-                <p>The Player Selection Process is button values-based and principle-driven guide and approach to player selection that is designed to help sport organizations ensure transparency and fairness as well as communicate their commitment to True Sport.</p>
-            </div>
+          </div>
         </div>
-    </header>
-    <!-- header section ends here  -->
-    <main class="my-5">
-       <div class="row bg-dark text-white">
-         <!-- player section here  -->
-         <section id="show-card-field" class="row col-8">
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <div class="card m-3 bg-dark text-white bg-dark text-white">
-                    <img src="images/messi.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 id="messi" class="card-title">Lionel Messi</h5>
-                      <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist</small></p>    
-                      <button onclick="addPlayer('messi')" class="btn btn-primary d-block w-100  text-uppercase text-bold">select</button>
-                    </div>
-                  </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card m-3 bg-dark text-white">
+            <img src="images/neymar.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 id="neymar" class="card-title">Neymar Jr.</h5>
+              <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist</small></p>
+              <button onclick="addPlayer('neymar')"
+                class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <div class="card m-3 bg-dark text-white">
-                    <img src="images/neymar.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 id="neymar" class="card-title">Neymar Jr.</h5>
-                      <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist</small></p>    
-                      <button onclick="addPlayer('neymar')" class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
-                    </div>
-                  </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card m-3 bg-dark text-white">
+            <img src="images/ronaldo.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 id="ronaldo" class="card-title">Ronaldo</h5>
+              <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist</small></p>
+              <button onclick="addPlayer('ronaldo')"
+                class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <div class="card m-3 bg-dark text-white">
-                    <img src="images/ronaldo.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 id="ronaldo" class="card-title">Ronaldo</h5>
-                      <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist</small></p>    
-                      <button onclick="addPlayer('ronaldo')" class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
-                    </div>
-                  </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card m-3 bg-dark text-white">
+            <img src="images/romos.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 id="romos" class="card-title">Sergio Ramos</h5>
+              <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist
+                </small></p>
+              <button onclick="addPlayer('romos')"
+                class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <div class="card m-3 bg-dark text-white">
-                    <img src="images/romos.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 id="romos" class="card-title">Sergio Ramos</h5>
-                      <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist
-                    </small></p>    
-                      <button onclick="addPlayer('romos')" class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
-                    </div>
-                  </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card m-3 bg-dark text-white">
+            <img src="images/ronaldinho.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 id="ronaldinho" class="card-title">Ronaldinho</h5>
+              <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist
+                </small></p>
+              <button onclick="addPlayer('ronaldinho')"
+                class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <div class="card m-3 bg-dark text-white">
-                    <img src="images/ronaldinho.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 id="ronaldinho" class="card-title">Ronaldinho</h5>
-                      <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist
-                    </small></p>    
-                      <button onclick="addPlayer('ronaldinho')" class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
-                    </div>
-                  </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card m-3 bg-dark text-white">
+            <img src="images/mbappe.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 id="mbappe" class="card-title">Mbappé</h5>
+              <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist
+                </small></p>
+              <button onclick="addPlayer('mbappe')"
+                class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <div class="card m-3 bg-dark text-white">
-                    <img src="images/mbappe.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 id="mbappe" class="card-title">Mbappé</h5>
-                      <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist
-                    </small></p>    
-                      <button onclick="addPlayer('mbappe')" class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
-                    </div>
-                  </div>
-            </div>
-        </section>
-        <aside class="col-4  bg-dark text-danger m-2">
-            <div style="background-color: black;" class="my-2">
-                <h2 class="text-center">Selected - V</h2>
-                <ul id="player-list" class="list-group list-group-flush"></ul>
-            </div>
-            <div>
+          </div>
+        </div>
+      </section>
+      <aside class="col-4  bg-dark text-danger m-2">
+        <div style="background-color: black;" class="my-2">
+          <h2 class="text-center">Selected - V</h2>
+          <ul id="player-list" class="list-group list-group-flush"></ul>
+        </div>
+        <div style="background-color: black;" class="my-3 p-2">
+          <h2 class="text-center">Budget</h2>
 
+          <input type="text" class="form-control bg-dark text-danger" id="expenses-field"
+            placeholder="Expenses Per Player">
+          <button class="btn btn-success d-block w-100 text-center text-uppercase my-3">calculate</button>
+          <div class="d-flex justify-content-around">
+            <p class="fw-semibold">Player Expenses:</p>
+            <p class="fw-bold">$<span id="total-expenses">1250</span></p>
+          </div>
+          <div class="mb-3 row ">
+            <label for="manager-field" class="col-sm-4 col-form-label ">Manager</label>
+            <div class="col-sm-8">
+              <input type="text" class="form-control bg-dark text-white" id="manager-field">
             </div>
-        </aside>
-       </div>
-    </main>
+          </div>
+          <div class="mb-3 row ">
+            <label for="coach-field" class="col-sm-4 col-form-label ">Coach</label>
+            <div class="col-sm-8">
+              <input type="text" class="form-control bg-dark text-white" id="coach-field">
+            </div>
+          </div>
+          <button class="btn btn-info d-block w-100 text-center text-uppercase my-3">calculate Total</button>
+          <div class="d-flex justify-content-around">
+            <p class="fw-semibold">Total:</p>
+            <p class="fw-bold">$<span id="total-expenses">1250</span></p>
+          </div>
+        </div>
+        <div>
 
-    <!-- external js link  -->
-    <script src="js/app.js"></script>
-    <!-- bootstrap js cdn link  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  </body>
+        </div>
+      </aside>
+    </div>
+  </main>
+
+  <!-- external js link  -->
+  <script src="js/app.js"></script>
+  <!-- bootstrap js cdn link  -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
