validation with manager cost and coach cost done

--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
           </div>
         </div>
       </section>
+
+      <!-- side bar section design starts here  -->
       <aside class="col-4  bg-dark text-danger m-2">
         <div style="background-color: black;" class="my-2">
           <h2 class="text-center">Selected - V</h2>
