add more three player

--- a/index.html
+++ b/index.html
@@ -110,6 +110,42 @@
             </div>
           </div>
         </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card m-3 bg-dark text-white">
+            <img src="images/silva.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 id="silva" class="card-title">Thiago Silva</h5>
+              <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist
+                </small></p>
+              <button onclick="addPlayer('silva')"
+                class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card m-3 bg-dark text-white">
+            <img src="images/levan.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 id="levan" class="card-title">Lewandowski</h5>
+              <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist
+                </small></p>
+              <button onclick="addPlayer('levan')"
+                class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card m-3 bg-dark text-white">
+            <img src="images/haland.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 id="haland" class="card-title fw-normal">Erling Haaland</h5>
+              <p class="card-text"><small class="text-muted">36 Goals :: 120 Assist
+                </small></p>
+              <button onclick="addPlayer('haland')"
+                class="btn btn-primary d-block w-100 text-uppercase text-bold">select</button>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- side bar section design starts here  -->
