--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
     </div>
   </main>
 
+  <footer style="background-color: black;" class="p-5 d-flex justify-content-center">
+    <p class="text-white">Copyright @ 2022 All Rights Reserved</p>
+  </footer>
   <!-- external js link  -->
   <script src="js/app.js"></script>
   <!-- bootstrap js cdn link  -->
